--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
     "express-status-monitor": "^1.3.4",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.9"
+  },
+  "engines": {
+    "node": ">=18.x"
+  },
+  "vercel": {
+    "buildCommand": "npm run build"
   }
 }
